--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,9 @@ script:
   # Ansible syntax check.
   - 'sudo docker exec --tty "$(cat ${container_id})" env TERM=xterm ansible-playbook /etc/ansible/roles/role_test/tests/test.yml --syntax-check'
 
+  # Ansible lint check.
+  - 'sudo docker exec --tty "$(cat ${container_id})" env TERM=xterm ansible-lint /etc/ansible/roles/role_test/tests/test.yml'
+
   # Test role.
   - 'sudo docker exec --tty "$(cat ${container_id})" env TERM=xterm ansible-playbook /etc/ansible/roles/role_test/tests/test.yml -vvv'
 
