--- a/tests/Dockerfile.centos-6
+++ b/tests/Dockerfile.centos-6
@@ -6,6 +6,11 @@ RUN yum -y install epel-release
 RUN yum -y install git sudo ansible
 RUN yum clean all
 
+
+# Install ansible-pip
+RUN yum -y install python-pip
+RUN pip install ansible-pip
+
 # Install cloudwatch scripts dependencies
 RUN yum -y install initscripts
 RUN yum -y install cronie
