--- a/tests/Dockerfile.centos-7
+++ b/tests/Dockerfile.centos-7
@@ -16,6 +16,10 @@ rm -f /lib/systemd/system/anaconda.target.wants/*;
 RUN yum -y install epel-release
 RUN yum -y install ansible sudo
 
+# Install ansible-lint
+RUN yum -y install python-pip
+RUN pip install ansible-lint
+
 # Install cloudwatch scripts dependencies
 RUN yum -y install initscripts
 RUN yum -y install cronie
