Using systemd ansible module instead of shell command

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,2 +1,8 @@
 ---
 # handlers file for ansible-role-ssm-agent
+- name: systemctl_handler
+  systemd:
+    name: amazon-ssm-agent
+    daemon_reload: yes
+    state: "{{ ssm_agent_svc_state }}"
+    enabled: yes
